style.css
.column {
  background-color: rgb(56, 56, 65);
}

.header {
  font-size: 35px;
  font-weight: bold;
  color: white;
}

.breweryName, .hotelName {
  font-size: 25px;
}

hr {
  margin-top: 10px;
  background-color: goldenrod;
}

.box {
  background-color: rgb(183, 183, 185);
}

span {
  font-weight: bolder;
}

.columnMargin {
  margin-right: 20px;
}

#searchBar {
  position: absolute;
  left: 71vh;
  bottom: 30vh;
}
.hero-body {
  text-align: center;
}
#background {
  background-image: url('./images/brewery2.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
}
#myTitle {
  font-family: 'Nerko One', cursive;
  font-size: 60pt;
  color: rgb(247, 237, 100);
  text-shadow: 5px 3px 2px #0e0d0d;
}

.staticMap {
  margin:  0 auto;
  align-items: center;
  text-align: center;
}

